Bug 344895: Speed up (and clean up) range code to make inline spellcheck faster. r/sr=bz